--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,9 @@
 body {
-  background-color: #ffffff; /* fallback for older browsers */
-
-  
+  background-color: rgb(19, 25, 46); 
   font-family: 'Roboto', sans-serif;
   line-height: 1.6;
 }
-
-
+  
 .row-header {
   background-color: #ffffff;
   width: 100%;
@@ -36,20 +33,44 @@ body {
 
 .card {
   width: 20rem;
-  background-color: #ffffff;
-  border: 1px solid #e0e0e0;
+  height: 25rem; 
+  background-color: rgb(60, 80, 110);
+  border: 1px solid #000000;
   border-radius: 15px;
   box-shadow: 0 8px 12px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  overflow: hidden; 
 }
 
+.card-img-top {
+  width: 100%; 
+  height: 50%; 
+  object-fit: cover; 
+}
 
 .card-body {
-  background-color: #ffffff;
-  color: #333;
+  background-color: rgb(60, 80, 110);
+  color: #ffffff;
   padding: 1.5rem;
   border-radius: 0 0 15px 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; 
+  height: 100%; 
 }
+
+.card-title {
+  margin-bottom: auto; 
+}
+
+.card-text {
+  margin-top: 10px; 
+}
+
+.card a.btn {
+  margin-top: auto; 
+}
+
 
 .btn-primary {
   background-color: #007bff;
@@ -78,11 +99,7 @@ body {
   flex-wrap: wrap;
 }
 
-.card-img-top {
-  max-height: 220px;
-  object-fit: cover;
-  border-radius: 15px 15px 0 0;
-}
+
 
 @media (max-width: 768px) {
   .row {
@@ -112,5 +129,66 @@ body {
 
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
+}
+.sidebar {
+  height: 100vh;
+  width: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #272e34;
+  overflow-x: hidden;
+  padding-top: 50px;
+  transition: 0.5s;
+  z-index: 1050;
+}
+
+.sidebar a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 18px;
+  color: #f8f9fa;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidebar a:hover {
+  color: #ced4da;
+}
+
+.sidebar .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+  color: #f8f9fa;
+  text-decoration: none;
+}
+
+.main-content {
+  transition: margin-left 0.5s;
+  padding-left: 0;
+}
+
+.sidebar-open .main-content {
+  padding-left: 250px;
+}
+
+.menu-btn {
+  background: none;
+  border: none;
+  color: white;
+  padding: 10px 15px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.menu-btn:focus {
+  outline: none;
+}
+.menu-btn:hover {
+  transform: translateY(-3px);
+  color: #007bff;
 }
 
